--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <section id="inicio">
     <h4>CIENTISTA E ANALISTA DE DADOS</h4>
     <h1><img src="/images/gif_fundo2.gif" alt="A" width="90"/>NA ELISA ZANON</h1>
-    <p class="subtitulo reveal-text">"Pelos dados, conseguimos a matéria-prima; pela informação, estabelecemos conexões; e pela sabedoria, realizamos as análises."</p>
+    <p class="subtitulo reveal-text">"Com os dados, adquirimos a matéria-prima; através da informação, estabelecemos conexões; e por meio da sabedoria, realizamos as análises."</p>
 </section>
 
 <section id="sobre">
