Atualização link portfólio index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <section id="portfolio">
     <h2>PORTFÓLIO</h2>
-    <p><a href="https://github.com/anaelisazanon"><img src="/images/icons/icon_github.png" alt="icon github" width="50" align="center"/> GitHub </a></p>
+    <h3><a href="https://sites.google.com/view/anaelisazanon?usp=sharing">Clique aqui para visualizar o Portfólio</a></h3>
 </section>
 
 <section id="habilidades">
