--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
     <ul>
         <li><img src="/images/gif_fundo.gif" alt="Imagem Ciencia de Dados" width="400" /></li>
         <li>- Data Science Orientation - IBM - 11 horas - 01/2024 - Curso 01 do Programa IBM Data Science; Noções de bancos de dados, visualização de dados, análise estatística, modelagem preditiva, algoritmos de aprendizado de máquina, mineração de dados, Python, SQL, Jupyter notebooks, Github, Rstudio, Pandas, Numpy, ScikitLearn, Matplotlib etc.
-        <br>- Introdução ao Aprendizado de Máquina - USP - 10 horas - 01/2024
-        <br>- Inteligência Artificial na saúde - VII Escola Avançada em Big Data Analysis - 04 horas - 10/2023
-        <br>- Trilha Digital Data Science - Santander Coders - 17 horas - 06/2023 - Python, Algoritmos, Estatística, Banco de Dados, SQL, Power BI, Git e Versionamento.
-        <br>- Introdução à Análise Exploratória de Dados e Métodos Estatísticos - USP- 60 horas - 01/2023
-        <br>- Gestão Estratégica - IFSC - 120 horas - 10/2022
-        <br>- Programador de Sistemas (C++) - IFB - 200 horas - 07/2020
-        <br>- Curso de Inglês - Cooplem Idiomas - 897 horas - 07/2015<br><br>
+        <br><br>- Introdução ao Aprendizado de Máquina - USP - 10 horas - 01/2024
+        <br><br>- Inteligência Artificial na saúde - VII Escola Avançada em Big Data Analysis - 04 horas - 10/2023
+        <br><br>- Trilha Digital Data Science - Santander Coders - 17 horas - 06/2023 - Python, Algoritmos, Estatística, Banco de Dados, SQL, Power BI, Git e Versionamento.
+        <br><br>- Introdução à Análise Exploratória de Dados e Métodos Estatísticos - USP- 60 horas - 01/2023
+        <br><br>- Gestão Estratégica - IFSC - 120 horas - 10/2022
+        <br><br>- Programador de Sistemas (C++) - IFB - 200 horas - 07/2020
+        <br><br>- Curso de Inglês - Cooplem Idiomas - 897 horas - 07/2015<br>
         </li>
     </ul>
     <p>O que eu posso fazer por você? Estes são alguns trabalhos em que posso utilizar minhas habilidades para gerar soluções eficientes e eficazes em problemas que você possa enfrentar</p>
