--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
         <div class="grid-item">
             <img src="/images/icons/icon2.png" alt="Ícone 2">
-            <h4>Desenvolvedor Back-End</h4>
+            <h4>Desenvolvedora Back-End</h4>
             <p class="subtitulo2">Programação em C e C++.</p>
         </div>
         <div class="grid-item">
