--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <br><br>- Introdução à Análise Exploratória de Dados e Métodos Estatísticos - USP- 60 horas - 01/2023
         <br><br>- Gestão Estratégica - IFSC - 120 horas - 10/2022
         <br><br>- Programador de Sistemas (C++) - IFB - 200 horas - 07/2020
-        <br><br>- Curso de Inglês - Cooplem Idiomas - 897 horas - 07/2015<br>
+        <br><br>- Curso de Inglês - Cooplem Idiomas - 897 horas - 07/2015<br><br>
         </li>
     </ul>
     <p>O que eu posso fazer por você? Estes são alguns trabalhos em que posso utilizar minhas habilidades para gerar soluções eficientes e eficazes em problemas que você possa enfrentar</p>
